update full text search with postgres
